# picos-gc

./: README.md  pyproject.toml
examples/2-PE_VANESA/A1_1 AL b5_20/: 19diciembre_lle_aromas_2pe.gcb  A1_1.gcd  A1_2.gcd  A1_4.gcd  A2_5.gcd  A2_6.gcd  A2_7.gcd  A2_8.gcd  A3_10.gcd  A3_11.gcd  A3_12.gcd  A3_9.gcd  A4_13.gcd  A4_14.gcd  A4_15.gcd  A4_16.gcd  A5_17.gcd  A5_18.gcd  A5_19.gcd  A5_20.gcd  B1_1.gcd  B1_2.gcd  B1_3.gcd  B1_4.gcd  B2_5.gcd  B2_6.gcd  B2_7.gcd  B2_8.gcd  B3_10.gcd  B3_11.gcd  B3_12.gcd  B3_9.gcd  B4_13.gcd  B4_14.gcd  B4_15.gcd  B4_16.gcd  B5_17.gcd  B5_18.gcd  B5_19.gcd  B5_20.gcd
examples/2-PE_VANESA/Calibracion_Aromas_Solventes/: 1hexoh1  1hexoh2  1hexoh3  1hexoh4  1hexoh5  1octoh1.gcd  1octoh2.gcd  1octoh3.gcd  1octoh4.gcd  1octoh5.gcd  2-propanol_limpieza.gcd  2-propanol_limpieza2.gcd  2-propanol_limpieza3.gcd  2-propanol_limpieza4.gcd  2m2boh1.gcd  2m2boh4.gcd  2m2boh5.gcd  2m3b2oh1.gcd  2m3b2oh2.gcd  2m3b2oh3.gcd  2m3b2oh4.gcd  2m3b2oh5.gcd  2octanone1.gcd  2octanone2.gcd  2octanone3.gcd  2octanone4.gcd  2octanone5.gcd  2pe2.gcd  2pe3.gcd  2pe4.gcd  Batch1_curvas21_11_2025.gcb  Batch2_curvas21_11_2025.gcb  beta1.gcd  beta2.gcd  beta3.gcd  beta4.gcd  beta5.gcd  gamma1.gcd  gamma2.gcd  gamma3.gcd  (+7 more)
examples/2-PE_VANESA/Vanesa STEP/: C1_1 al D3_12.gcb  C1_1.gcd  C1_10.gcd  C1_11.gcd  C1_12.gcd  C1_13.gcd  C1_14.gcd  C1_15.gcd  C1_16.gcd  C1_2.gcd  (+57 more)
examples/2m2boh/: 2m2boh2.gcd  2m2boh3.gcd
examples/vanesa/: 2pe1.gcd  2pe5.gcd  A1_3.gcd
src/picos_gc/: __init__.py  aligner.py  cli.py  detector.py  integrator.py  processor.py  reader.py
(+18 files in other folders)
